# noticeimilate

./: .editorconfig  .gitattributes  .prettierrc  README.md  docker-compose.yml  flake.nix  shell.nix
.dependabot/: config.yml
.github/: dependabot.yml
.github/workflows/: make.yml
backend/: Cargo.toml
backend/src/: main.rs  settings.rs
db/sql/: 01_create-users.sh  02_recreate_dbs.sql
frontend/: elm.json  package-lock.json  package.json
frontend/tests/: Example.elm
monitoring/grafana/provisioning/dashboards/: all.yml
monitoring/grafana/provisioning/datasources/: all.yml
monitoring/grafana/provisioning/notifiers/: all.yml
monitoring/prometheus/: prometheus.yml
secrets/: .gitignore  create-placeholders.sh
src/fetcher/: Cargo.toml
src/fetcher/config/: Default.toml
src/fetcher/src/: main.rs  settings.rs
src/replenisher/: Cargo.toml
src/replenisher/config/: Default.toml
src/replenisher/src/: main.rs  settings.rs
