[package]
name = "noticeimilate-backend"
version = "0.1.0"
authors = ["Robert K. Bell <robert.k.bell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "settings"
path = "src/settings.rs"

[dependencies]
config = "0.10"
postgres = "0.17.3"
postgres-types = { version="0.1.2", features=["derive"] }
serde = {version="1.0.115", features=["derive"]}
