[package]
name = "noticeimilate-backend"
version = "0.1.0"
authors = ["Robert K. Bell <robert.k.bell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "settings"
path = "src/settings.rs"

[dependencies]
config = "0.10"
postgres = "0.19.0"
postgres-types = { version="0.2.0", features=["derive"] }
serde = {version="1.0.128", features=["derive"]}
