[package]
name = "fetcher"
version = "0.1.0"
authors = ["Robert K. Bell <robert.k.bell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.10"
postgres = "0.15.2"
serde = {version="1.0.106", features=["derive"]}
