[package]
name = "replenisher"
version = "0.1.0"
authors = ["Robert K. Bell <robert.k.bell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.10"
postgres = "0.17.2"
postgres-types = { version="0.1.1", features=["derive"] }
serde = { version="1.0.106", features=["derive"] }
